--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!--Favicon-->
   <link rel="shortcut icon" href="/images/favicon.png " type="image/x-icon">
-  <link rel="icon" href="/images/favicon.png " type="image/x-icon">
+  <link rel="icon" href="/favicon.png " type="image/x-icon">
 
   
   <meta property="og:title" content="Cyber Saguaros" />
