--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="/scss/style.min.css" media="screen">
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="/images/favicon.png " type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.png " type="image/x-icon">
   <link rel="icon" href="/favicon.png " type="image/x-icon">
 
   
@@ -95,7 +95,7 @@ if (!doNotTrack) {
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 text-center mb-5 mb-md-0">
-				<img class="img-fluid" src="/images/cybersaguaros_logo3.png" alt="">
+				<img class="img-fluid" src="/cybersaguaros_logo3.png" alt="">
 			</div>
 			<div class="col-md-6 align-self-center text-center text-md-left">
 				<div class="block">
